# pizza_bot

./: .gitignore
imperia_pizza_back/: .env  AGENTS.md  Cargo.toml  docker-compose.yml
imperia_pizza_back/.sqlx/: query-14f3f28b98b3d68d9d6749f25b1e99a4fb74aae9177982511ce8b55ccdb63c01.json  query-1a2445a4f85653b10ac7eb1c71796be6cc349a9ccf0cb7f500fdf6c187cca0ed.json  query-250a4d002d74216c42f8dc2ceca0ed8009d6d5986ecb94708a6c424e090bebb5.json  query-2b0433ecf249fa6bca965fd1b9f823ed41d003be5e692c81d5c41763b702326e.json  query-3c03c9924379a4eae61df7d3dfca26302f2a7e90ab5ad7eec5f6c96d1710798e.json  query-4e161000defccc8c76522bc5e12600a9297f4009d87bd9f685b4ddf62217cc6f.json  query-4e720dcd3e284f385d868b3001b2628bb25dca04cfea4f595febe32edcd5a7dd.json  query-4f5f3b5eb494861d46fc636c9791290784f041f33638cce32a835aac6a7d7b6d.json  query-576a45ef49b5fb1341253805cb45667b3f8fb446ee0d660a6fbccfe2ae95b249.json  query-590da851ed715151b242671d10b07fe46969e717da8e8ab31fd582d636e69fd5.json  query-665c2639d751f5d7c777708b34ba776153da1a2d1492259fd352b094bcd96413.json  query-702630c58d411f4f487b14d4df0a3107b63f907d0aca7fb03962c99ff5c05275.json  query-7269d912820693af3fc1eccf4f86572d6f6c2d7634c21e654fd59cfcaf1b089c.json  query-76342c11669095a89f30c5396b5f889e9415322750aa72ca32c8ca8b06db0ad6.json  query-77b7ce53b61e597979bcedf2b697510c3d80c2cd8513820a7b1567a0759e3963.json  query-8a1e0841fe99ae992ccf1d511e11419b60877598a2c592ab604bf84a9049ffd5.json  query-8f12546a77748e8d25e2b320a1b369492ab48288180046372771a682af6858c6.json  (+6 more)
imperia_pizza_back/migrations/: 20260628164212_init_schema.sql  (+1 more)
(+64 files in other folders)
