[package]
name = "imperia_pizza_back"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }

axum = "0.8.9"

dotenvy = "0.15"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"                                 

sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "macros",
] }

tower-http = { version = "0.7.0", features = ["cors", "trace"] }

tracing = "0.1"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }

